# elastic-search-demo

./: .gitignore  CLAUDE.md
c00/: 00-study-guide-answer.md
c01/: 01-core-concepts-answer.md
c03/: es-podman.sh
c04/: 04-compose-and-kibana-answer.md  compose.yml  start-elasticsearch.sh  start-kibana.sh
c05/: 05-rest-api-and-dev-tools-answer.md
c06/: 06-index-document-crud-answer.md
c07/: 07-mapping-and-field-types-answer.md
c08/: 08-analysis-and-chinese-text-answer.md
c09/: 09-query-dsl-answer.md
c10/: 10-relevance-sort-pagination-answer.md
c11/: 11-aggregations-answer.md
c12/: 12-data-ingestion-answer.md
c13/: README.md
c13/javascript/: README.md
c13/python/: pyproject.toml  search_products.py
elasticsearch-course/: 00-study-guide.md  01-core-concepts.md  02-native-installation.md  03-container-installation.md  04-compose-and-kibana.md  05-rest-api-and-dev-tools.md  06-index-document-crud.md  07-mapping-and-field-types.md  08-analysis-and-chinese-text.md  09-query-dsl.md  10-relevance-sort-pagination.md  11-aggregations.md  12-data-ingestion.md  13-application-clients.md  14-index-management.md  15-security.md  16-monitoring-and-troubleshooting.md  17-backup-restore-upgrade.md  18-performance-and-capacity.md  19-enterprise-runbook.md  20-capstone-project.md  README.md  appendix-api-cheatsheet.md
